--- a/FIT5032-2021S2/FIT5032-2021S2.csproj
+++ b/FIT5032-2021S2/FIT5032-2021S2.csproj
@@ -52,9 +52,16 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="SendGrid, Version=9.24.2.0, Culture=neutral, PublicKeyToken=4f047e93159395ca, processorArchitecture=MSIL">
+      <HintPath>..\packages\SendGrid.9.24.2\lib\net452\SendGrid.dll</HintPath>
+    </Reference>
+    <Reference Include="StarkbankEcdsa, Version=1.0.0.0, Culture=neutral, PublicKeyToken=b2e6337a5d77bfbc, processorArchitecture=MSIL">
+      <HintPath>..\packages\starkbank-ecdsa.1.3.1\lib\net452\StarkbankEcdsa.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -168,6 +175,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BookEventsController.cs" />
     <Compile Include="Controllers\EventTypesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -181,6 +189,10 @@
     <Compile Include="Migrations\202109030457314_InitialCreate.Designer.cs">
       <DependentUpon>202109030457314_InitialCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202109171009312_addBookEvent.cs" />
+    <Compile Include="Migrations\202109171009312_addBookEvent.Designer.cs">
+      <DependentUpon>202109171009312_addBookEvent.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BookEvent.cs" />
@@ -191,6 +203,7 @@
     <Compile Include="Models\StoreEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Utils\EmailSender.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-datetimepicker.css" />
@@ -590,6 +603,7 @@
     <Content Include="Views\UserRoles\CreateRole.cshtml" />
     <Content Include="Views\UserRoles\AddRoleToUser.cshtml" />
     <Content Include="Views\UserRoles\GetUserRoles.cshtml" />
+    <Content Include="Views\BookEvents\ViewBookedEvents.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -610,6 +624,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202109030457314_InitialCreate.resx">
       <DependentUpon>202109030457314_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202109171009312_addBookEvent.resx">
+      <DependentUpon>202109171009312_addBookEvent.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
