--- a/FIT5032-2021S2/packages.config
+++ b/FIT5032-2021S2/packages.config
@@ -32,5 +32,7 @@
   <package id="Moment.js" version="2.9.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="SendGrid" version="9.24.2" targetFramework="net472" />
+  <package id="starkbank-ecdsa" version="1.3.1" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
