mid Rating function

--- a/FIT5032-2021S2/FIT5032-2021S2.csproj
+++ b/FIT5032-2021S2/FIT5032-2021S2.csproj
@@ -197,12 +197,17 @@
     <Compile Include="Migrations\202109240736006_addEventColor.Designer.cs">
       <DependentUpon>202109240736006_addEventColor.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202110010916123_Rating.cs" />
+    <Compile Include="Migrations\202110010916123_Rating.Designer.cs">
+      <DependentUpon>202110010916123_Rating.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BookEvent.cs" />
     <Compile Include="Models\EventType.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Rating.cs" />
     <Compile Include="Models\Store.cs" />
     <Compile Include="Models\StoreEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -378,6 +383,7 @@
     <Content Include="Content\fullcalendar.min.css" />
     <Content Include="Content\fullcalendar.print.css" />
     <Content Include="Content\fullcalendar.print.min.css" />
+    <Content Include="Content\rate-star.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -732,6 +738,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202109240736006_addEventColor.resx">
       <DependentUpon>202109240736006_addEventColor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110010916123_Rating.resx">
+      <DependentUpon>202110010916123_Rating.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
